--- a/web/styles/product.css
+++ b/web/styles/product.css
@@ -119,6 +119,7 @@ html{
     color: black;
     text-decoration: none;
     font-weight: bold;
+    padding-left: .5em;
 }
 #cat{
     float: left;
